Project KahootPlatform {
  database_type: 'PostgreSQL'
  Note: '''
  Real-time quiz platform. PostgreSQL is the single durable source of truth for
  all persistent business data.

  Conventions:
  - Primary keys are UUID v7 (time-ordered), generated by the application for
    index locality and for chronological ordering without a separate timestamp.
  - Timestamps are timestamptz stored in UTC. Only functional timestamps are
    kept (question window, session start/finish, answer submission, last-seen);
    there are no created_at / updated_at audit columns.
  - Physical identifiers are snake_case; EF Core is configured with a snake_case
    naming convention.
  - The server is authoritative: deadlines, correctness, scores, game state and
    "already answered" are decided from these rows and server time only.

  game_status is the server-authoritative game state machine. Allowed transitions:
    Created         -> Lobby
    Lobby           -> QuestionActive | Finished
    QuestionActive  -> QuestionResults | Finished
    QuestionResults -> Leaderboard | Finished
    Leaderboard     -> QuestionActive | Finished
    Finished        -> (terminal)
  Any other transition is rejected by the application layer. Persisted as text.
  '''
}

Enum game_status {
  Created
  Lobby
  QuestionActive
  QuestionResults
  Leaderboard
  Finished
}

Table hosts {
  id uuid [pk]
  username varchar(64) [not null, unique, note: 'Login identity, case-insensitive (stored lower-cased). No email is used anywhere in the system']
  password_hash varchar(256) [not null, note: 'BCrypt hash (work factor >= 12). Never plaintext or a reversible value']

  indexes {
    username [unique, name: 'uq_host_username']
  }

  Note: 'Owns quizzes and game sessions. Not hard-deleted while any game_session references it (game_sessions.host_id is ON DELETE RESTRICT). A bootstrap host is created by the startup seeder.'
}

Table refresh_tokens {
  id uuid [pk]
  host_id uuid [not null, ref: > hosts.id, note: 'ON DELETE CASCADE']
  token_hash varchar(128) [not null, unique, note: 'SHA-256 hex of the opaque refresh token; the raw token is returned to the client once and never stored']
  expires_at timestamptz [not null]
  revoked_at timestamptz [null, note: 'Set on rotation or logout. Active when revoked_at IS NULL AND now() < expires_at']
  replaced_by_token_id uuid [null, ref: > refresh_tokens.id, note: 'Rotation chain: the token that superseded this one. Reuse of a rotated token revokes the chain']

  indexes {
    token_hash [unique, name: 'uq_refresh_token_hash', note: 'Lookup on refresh']
    host_id [name: 'ix_refresh_token_host_id']
    replaced_by_token_id [name: 'ix_refresh_tokens_replaced_by_token_id', note: 'FK index for the self-referencing rotation chain']
  }

  Note: 'Host session persistence for JWT refresh-token rotation with reuse detection.'
}

Table quizzes {
  id uuid [pk]
  host_id uuid [not null, ref: > hosts.id, note: 'Owner. ON DELETE CASCADE']
  title varchar(200) [not null]
  description varchar(1000) [null]
  is_published boolean [not null, default: false, note: 'A game can only be started from a published quiz']

  indexes {
    host_id [name: 'ix_quiz_host_id', note: 'list the quizzes owned by a host']
  }

  Note: 'A quiz referenced by any game_session cannot be deleted (game_sessions.quiz_id is ON DELETE RESTRICT), preserving historical results. Editing is blocked while a game_session for it is not finished.'
}

Table questions {
  id uuid [pk]
  quiz_id uuid [not null, ref: > quizzes.id, note: 'ON DELETE CASCADE']
  order_index int [not null, note: '0-based position within the quiz']
  text varchar(500) [not null]
  image_url varchar(2048) [null, note: 'Optional question image; a relative path served by the API under FileStorage.PublicBasePath']
  time_limit_seconds int [not null, default: 20, note: 'CHECK between 5 and 300']
  points int [not null, default: 1000, note: 'Base points before the speed factor. CHECK >= 0']

  indexes {
    (quiz_id, order_index) [unique, name: 'uq_question_quiz_order']
    quiz_id [name: 'ix_question_quiz_id', note: 'Load an ordered quiz']
  }

  Note: 'Application-enforced invariant: 2..6 choices, exactly one with is_correct = true.'
}

Table choices {
  id uuid [pk]
  question_id uuid [not null, ref: > questions.id, note: 'ON DELETE CASCADE']
  order_index int [not null, note: '0-based position within the question (0..5)']
  text varchar(300) [null, note: 'Nullable: a choice may be image-only. Application requires text OR image_url']
  image_url varchar(2048) [null, note: 'Optional choice image; a relative path served by the API under FileStorage.PublicBasePath']
  is_correct boolean [not null, default: false]

  indexes {
    (question_id, order_index) [unique, name: 'uq_choice_question_order']
    question_id [name: 'ix_choice_question_id']
  }

  Note: 'is_correct lives here but is never serialized to player clients before the question is revealed.'
}

Table game_sessions {
  id uuid [pk]
  quiz_id uuid [not null, ref: > quizzes.id, note: 'ON DELETE RESTRICT']
  host_id uuid [not null, ref: > hosts.id, note: 'Denormalized owner copied from quizzes.host_id at creation so ownership checks need no join. ON DELETE RESTRICT']
  pin varchar(8) [not null, note: '6-digit numeric join code generated server-side']
  status game_status [not null, default: 'Created']
  current_question_id uuid [null, ref: > questions.id, note: 'Active / most-recent question. ON DELETE RESTRICT']
  current_question_index int [null, note: '0-based pointer into the ordered question list']
  current_question_started_at timestamptz [null, note: 'Server timestamp set when the question opens']
  current_question_ends_at timestamptz [null, note: 'Server-authoritative deadline = current_question_started_at + time_limit_seconds']
  started_at timestamptz [null, note: 'Set once, when the first question starts']
  finished_at timestamptz [null]

  indexes {
    pin [unique, name: 'uq_game_session_active_pin', note: 'PARTIAL UNIQUE WHERE status is not Finished, so a PIN becomes reusable once its game ends']
    host_id [name: 'ix_game_session_host_id']
    quiz_id [name: 'ix_game_session_quiz_id']
    status [name: 'ix_game_session_status', note: 'List active games / metrics']
    current_question_id [name: 'ix_game_session_current_question_id']
  }

  Note: '''
  Every run of a quiz is a new game_sessions row with its own participants,
  answers, scores and leaderboard. Prior sessions are never mutated and are
  isolated by game_session_id on every child row.

  Optimistic concurrency: a shadow uint property mapped to the PostgreSQL system
  column xmin (type xid) is the concurrency token - no explicit column. Concurrent
  state transitions (host double-click "Next") fail with a concurrency exception
  and are resolved idempotently.

  CHECK ck_game_session_question_window:
    current_question_ends_at IS NULL OR current_question_started_at IS NULL
    OR current_question_ends_at >= current_question_started_at
  '''
}

Table participants {
  id uuid [pk]
  game_session_id uuid [not null, ref: > game_sessions.id, note: 'ON DELETE CASCADE. Scopes a player to exactly one session']
  nickname varchar(30) [not null, note: 'Handle name as entered']
  nickname_normalized varchar(30) [not null, note: 'Trimmed + lower-cased; used for case-insensitive uniqueness']
  session_token_hash varchar(128) [not null, unique, note: 'SHA-256 hex of the player reconnection token. This is player identity on reconnect - NOT the SignalR connection id']
  connection_id varchar(128) [null, note: 'Current SignalR connection id; NULL when disconnected. Transient, never identity']
  last_seen_at timestamptz [not null, note: 'Updated on connect / disconnect / heartbeat for the reconnection window']
  total_score int [not null, default: 0, note: 'Running server-calculated score. CHECK >= 0. Denormalized so the leaderboard is not recomputed from answers on every request']
  last_rank int [null, note: 'Leaderboard position from the last time standings were computed (question close)']
  is_removed boolean [not null, default: false, note: 'Soft removal by the host; the row is kept so existing answers stay valid']
  removed_at timestamptz [null]

  indexes {
    session_token_hash [unique, name: 'uq_participant_session_token']
    (game_session_id, nickname_normalized) [unique, name: 'uq_participant_game_nickname', note: 'PARTIAL UNIQUE WHERE is_removed = false']
    game_session_id [name: 'ix_participant_game_session_id', note: 'Lobby / player list']
    (game_session_id, total_score) [name: 'ix_participant_game_score', note: 'Leaderboard ordering (query sorts total_score DESC)']
    connection_id [name: 'ix_participant_connection_id', note: 'Resolve the player on a SignalR disconnect']
  }

  Note: 'Join order is the UUID v7 id order (no separate joined_at column). Connectivity is derived: connected == connection_id IS NOT NULL.'
}

Table answers {
  id uuid [pk]
  game_session_id uuid [not null, ref: > game_sessions.id, note: 'ON DELETE CASCADE. Answers are always scoped to their session']
  question_id uuid [not null, ref: > questions.id, note: 'ON DELETE RESTRICT']
  participant_id uuid [not null, ref: > participants.id, note: 'ON DELETE RESTRICT - players are soft-removed, never hard-deleted']
  selected_choice_id uuid [not null, ref: > choices.id, note: 'ON DELETE RESTRICT. An answer row always records a selected choice']
  is_correct boolean [not null, note: 'Server-evaluated at submission']
  points_awarded int [not null, default: 0, note: 'Server-calculated final points for this answer. CHECK >= 0']
  response_time_ms int [not null, note: 'server submitted_at - current_question_started_at. CHECK >= 0']
  submitted_at timestamptz [not null, note: 'Server receive time; the only timestamp trusted for deadline evaluation']

  indexes {
    (game_session_id, question_id, participant_id) [unique, name: 'uq_answer_participant_question', note: 'FINAL integrity boundary: one accepted answer per (game, question, player). A duplicate insert raises a unique violation that the application maps to an idempotent already-answered response']
    (game_session_id, question_id) [name: 'ix_answer_game_question', note: 'Response count and per-choice aggregation when a question closes']
    question_id [name: 'ix_answers_question_id', note: 'FK index; the composite above does not lead with question_id']
    participant_id [name: 'ix_answer_participant_id', note: 'answer history for one player, for the results screen']
    selected_choice_id [name: 'ix_answer_selected_choice_id', note: 'FK integrity checks and per-choice statistics']
  }

  Note: '''
  Hot path - one row is written only for an ACCEPTED answer. Acceptance rule
  (inclusive boundary):
      game_sessions.status = 'QuestionActive'
      AND game_sessions.current_question_id = answers.question_id
      AND submitted_at <= game_sessions.current_question_ends_at
  Late or duplicate submissions create neither a row nor a score.
  '''
}
